Endpoints de subir portadas funcionando
